[package]
name = "bj5"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
atlas = []
default = ["atlas"]

[dependencies]
bevy = "0.14"
tiled = "0.12"
bevy_ecs_tilemap = { version = "0.14", features = [ "atlas" ] }
bevy_keith = "0.1"
bevy_kira_audio = "0.20"
thiserror = "1"
bevy-inspector-egui = "0.25"
